# AXZ-Hexadecimal-Base16-Ring-V1

./: CITATION.cff  Makefile  PROOF.md  README.md  SHA256SUMS.txt  UPLOAD_FIRST.md  VISIBLE_GITHUB_ACTIONS_verify.yml  pyproject.toml
.github/workflows/: .gitignore  verify.yml
certificates/: certificate.json  integer_width_report.json  receipt.txt
data/: all_interval_values_sorted.txt  all_values_sorted.txt  negative_values_sorted.txt  nonpositive_values_sorted.txt  positive_values_sorted.txt  witnesses_1_to_6007.tsv
docs/: BASE16_CONCATENATION.md  DIRECTIONAL_SUBTRACTION.md  GITHUB_PUBLISHING.md  PRIOR_ART_NOTE.md  TRUTH_LABEL.md
scripts/: generate_certificate.py  verify_challenge_12.py  verify_data_hashes.py  verify_runtime_safety.py
src/axz_hexadecimal_base16_ring_v1/: __init__.py  core.py
tests/: test_certificate.py  test_data_hashes.py  test_runtime_safety.py  test_witnesses.py
