[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axz-hexadecimal-base16-ring-v1"
version = "1.0.0"
description = "Finite exact Base-16 ordered arithmetic certificate."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
